[package]
name = "spotify-dl"
version = "0.5.5"
authors = ["Guillem Castro <guillemcastro4@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/GuillemCastro/spotify-dl"
repository = "https://github.com/GuillemCastro/spotify-dl"
description = "A command-line utility to download songs and playlists from Spotify"

[dependencies]
structopt = { version = "0.3", default-features = false }
indicatif = "0.17"
librespot = { version = "0.6.0", default-features = false }
librespot-oauth = "0.6.0"
tokio = { version = "1", features = ["full", "tracing"] }
flacenc = { version = "0.4" }
regex = "1.7.1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
lazy_static = "1.4"
async-trait = "0.1"
dirs = "6.0.0"
mp3lame-encoder = { version = "0.2.1", optional = true }
futures = "0.3"
rayon = "1.10"

[features]
default = ["mp3"]
mp3 = ["dep:mp3lame-encoder"]
